edited about page, blog page and index page

--- a/about.html
+++ b/about.html
@@ -54,7 +54,7 @@
       </h2>
       <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample" style="display: flex; flex-direction: row; margin: 20px;">
         <div>
-          <img src="../melissaz_blog/images/Melissa Art.jpeg" width="300px" alt="mel">
+          <img src="images/Melissa Art.jpeg" width="300px" alt="mel">
         </div>
         <div class="accordion-body">
           <strong>My name is Lokoroma Sharon Melissa Mpenzi. A student of software engineering. I was born and raised in
@@ -81,7 +81,7 @@
           
         </div>
         <div>
-          <img src="../melissaz_blog/images/lover.jpeg" width="300px" alt="">
+          <img src="images/lover.jpeg" width="300px" alt="">
         </div>
       </div>
     </div>
@@ -94,7 +94,7 @@
       </h2>
       <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample" style="display: flex; flex-direction: row; margin: 20px;">
         <div>
-          <img src="../melissaz_blog/images/book.jpeg" width="300px" alt="">
+          <img src="images/book.jpeg" width="300px" alt="">
         </div>
         <div class="accordion-body">
           <strong>This being my first blog, I hope it's a good first trial and gets me well acquainted with blog
