--- a/index.html
+++ b/index.html
@@ -60,28 +60,28 @@
     <div class="carousel-inner">
     
       <div class="carousel-item active">
-        <img src="../melissaz_blog/images/♔ Cailloux Multicolores.jpeg" class="d-block w-100 " alt="beach" height="650px">
+        <img src="images/♔ Cailloux Multicolores.jpeg" class="d-block w-100 " alt="beach" height="650px">
         <div class="carousel-caption d-none d-md-block" style="margin-bottom: 300px;">
           <h1>Mpenzi's Digital Journal</h1>
           <p>Walk with me on my personal journey of becoming a web developer!</p>
         </div>
       </div>
       <div class="carousel-item">
-        <img src="../melissaz_blog/images/Butterfly.jpg" class="d-block w-100" alt="beach" height="650px">
+        <img src="images/Butterfly.jpg" class="d-block w-100" alt="beach" height="650px">
         <div class="carousel-caption d-none d-md-block" style="margin-bottom: 300px;">
           <h1>Mpenzi's Digital Journal</h1>
           <p>Walk with me on my personal journey of becoming a web developer!</p>
         </div>
       </div>
       <div class="carousel-item">
-        <img src="../melissaz_blog/images/pine.jpeg" class="d-block w-100" alt="beach" height="650px">
+        <img src="images/pine.jpeg" class="d-block w-100" alt="beach" height="650px">
         <div class="carousel-caption d-none d-md-block" style="margin-bottom: 300px;">
           <h1>Mpenzi's Digital Journal</h1>
           <p>Walk with me on my personal journey of becoming a web developer!</p>
         </div>
       </div>
       <div class="carousel-item">
-        <img src="../melissaz_blog/images/root.jpeg" class="d-block w-100" alt="glitter" height="650px">
+        <img src="images/root.jpeg" class="d-block w-100" alt="glitter" height="650px">
         <div class="carousel-caption d-none d-md-block" style="margin-bottom: 300px;">
           <h1>Mpenzi's Digital Journal</h1>
           <p>Walk with me on my personal journey of becoming a web developer!</p>
@@ -89,7 +89,7 @@
       </div>
 
       <div class="carousel-item">
-        <img src="../melissaz_blog/images/pinky.jpeg" class="d-block w-100" alt="purple" height="650px">
+        <img src="images/pinky.jpeg" class="d-block w-100" alt="purple" height="650px">
         <div class="carousel-caption d-none d-md-block" style="margin-bottom: 300px;">
           <h1>Mpenzi's Digital Journal</h1>
           <p>Walk with me on my personal journey of becoming a web developer!</p>
@@ -110,7 +110,7 @@
 
 <div class="content" style="display: flex; flex-direction: row; margin: 20px;">
   <div class="card" style="width: 18rem; margin-right: 100px; margin-left: 50px;">
-    <img src="../melissaz_blog/images/Melissa Art.jpeg" class="card-img-top" alt="art">
+    <img src="images/Melissa Art.jpeg" class="card-img-top" alt="art">
     <div class="card-body">
       <h4 class="card-title"><strong>Melissa's Profile</strong></h4>
       <p class="card-text">Hello World, I'm Melissa, a student at Refactory Academy. I'm passionate about tech and would love to be a web developer in the near future.</p>
@@ -118,7 +118,7 @@
     </div>
   </div>
   <div class="col align-self-start">
-    <img src="../melissaz_blog/images/enzo.jpeg" alt="">
+    <img src="images/enzo.jpeg" alt="">
   </div>  
 </div>
  
@@ -129,10 +129,10 @@
   <div class="" style="display: flex; flex-direction: row;">
     
     <div class="col align-self-center" style="margin-right: 30px;">
-      <img src="../melissaz_blog/images/Believe.jpeg" alt="" style="width: 500px;">
+      <img src="images/Believe.jpeg" alt="" style="width: 500px;">
     </div>
     <div class="col align-self-end">
-      <img src="../melissaz_blog/images/❤️❤️❤️.jpg" alt="" style="width: 500px;">
+      <img src="images/❤️❤️❤️.jpg" alt="" style="width: 500px;">
     </div>
   </div>
 </div>
