--- a/bloglist.html
+++ b/bloglist.html
@@ -46,7 +46,7 @@
   <div class="row row-cols-1 row-cols-md-2 g-4 blog-cards">
     <div class="col">
       <div class="card">
-        <img src="../melissaz_blog/images/7habits.jpeg" class="card-img-top" alt="...">
+        <img src="images/7habits.jpeg" class="card-img-top" alt="...">
         <div class="card-body">
           <h4 class="card-title"><strong>WEEK ONE - Leadership</strong></h4>
           <p class="card-text">The leadership class was our very first class at refactory. In week one, our facilitator
@@ -65,7 +65,7 @@
     </div>
     <div class="col">
       <div class="card">
-        <img src="../melissaz_blog/images/software.jpeg" class="card-img-top" alt="...">
+        <img src="images/software.jpeg" class="card-img-top" alt="...">
         <div class="card-body">
           <h4 class="card-title"><strong>WEEK ONE - Software Engineering</strong></h4>
           <p class="card-text">The very first week of this module was an amazing one. We got to learn interesting things
@@ -81,7 +81,7 @@
     </div>
     <div class="col">
       <div class="card">
-        <img src="../melissaz_blog/images/Bridge of Aspiration, London.jpeg" class="card-img-top" alt="...">
+        <img src="images/Bridge of Aspiration, London.jpeg" class="card-img-top" alt="...">
         <div class="card-body">
           <h4 class="card-title"><strong>WEEK TWO - Leadership</strong></h4>
           <p class="card-text">In week two, we dove deeper into the remaining 4 habits in the book "7 HABITS OF HIGHLY
@@ -101,7 +101,7 @@
     </div>
     <div class="col">
       <div class="card">
-        <img src="../melissaz_blog/images/website.jpeg" class="card-img-top" alt="...">
+        <img src="images/website.jpeg" class="card-img-top" alt="...">
         <div class="card-body">
           <h4 class="card-title"><strong>WEEK TWO - Software Engineering</strong></h4>
           <p class="card-text">In contrast with week one, the second week was rather very challenging to most of us. We
