edited about page

--- a/about.html
+++ b/about.html
@@ -76,7 +76,7 @@
       <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample" style="display: flex; flex-direction: row; margin: 20px;">
         <div class="accordion-body">
           <strong>I shockingly have a lot of hobbies that aren't tech related too.</strong> I'm not necessarily an
-          outgoing person but i happen to love extovert kind of activities. I love to dance, model, read novels and
+          outgoing person but I happen to love extrovert kind of activities. I love to dance, model, read novels and
           travel. In the near future, I hope to work in tech as well as fulfill my dream of owning a fashion house.
           
         </div>
