edited bloglist page

--- a/bloglist.html
+++ b/bloglist.html
@@ -44,6 +44,10 @@
 
 
   <div class="row row-cols-1 row-cols-md-2 g-4 blog-cards">
+    <div>
+      <a href="https://classroom.google.com/c/Njk2NjE0MTk3MDU2/m/Njk2NjE1NDE4OTI5/details">
+
+    
     <div class="col">
       <div class="card">
         <img src="images/7habits.jpeg" class="card-img-top" alt="...">
@@ -59,8 +63,9 @@
           <button type="button" class="btn btn-primary"
             style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">
             Read More
-          </button>
+          </button></a>
         </div>
+      </div>
       </div>
     </div>
     <div class="col">
@@ -100,6 +105,7 @@
       </div>
     </div>
     <div class="col">
+      
       <div class="card">
         <img src="images/website.jpeg" class="card-img-top" alt="...">
         <div class="card-body">
